# rust-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  export-docker.sh
.sisyphus/notepads/tts-feature/: learnings.md
.sisyphus/plans/: tts-feature.md
bot_lib/: Cargo.toml
bot_lib/src/: api_types.rs  event_bus.rs  lib.rs  structs.rs  utils.rs  websocket_api.rs  websocket_base.rs
bot_run/: Cargo.toml
bot_run/assets/skills/: seedance2.0-prompt-skill.md  shot-plan-skill.md  visual-brief-skill.md
bot_run/src/: choice.rs  cron.rs  draw5k.rs  dup_check.rs  feature.rs  gold.rs  image_matting.rs  jrrp.rs  lib.rs  loli.rs  main.rs  redis_client.rs  sdimage.rs  tts.rs  video_prompt.rs
bot_run/tests/: choice.rs  draw5k.rs  dup_check.rs  gold.rs  jrrp.rs  loli.rs  sdimage.rs
scripts/: reload-image-and-start.sh  restart.sh
