[workspace]
resolver = "2"
members = [
    "bot_lib",
    "bot_run",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["napcat-rs contributors"]
license = "MIT"
rust-version = "1.70"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
nanoid = "0.4"
thiserror = "2.0.18"
regex = "1"
once_cell = "1"
chrono = "0.4"
dotenvy = "0.15"
async-trait = "0.1"
tempfile = "3"
