[package]
name = "bot_lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
nanoid.workspace = true
thiserror.workspace = true
regex.workspace = true
once_cell.workspace = true
chrono.workspace = true

[lints.rust]
unsafe_code = "forbid"
