[package]
name = "bot_run"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bot_lib = { path = "../bot_lib" }
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
log.workspace = true
env_logger.workspace = true
dotenvy.workspace = true

redis = { version = "1.1.0", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13.2", features = [
    "json",
    "native-tls",
], default-features = false }
sha2 = "0.10"
image = "0.25"
imagehash = { git = "https://github.com/takebayashi/imagehash-rs" }
base64 = "0.22"
chrono.workspace = true
once_cell.workspace = true
thiserror.workspace = true
async-trait.workspace = true
rand = "0.10.0"
tempfile.workspace = true
num-traits = "0.2.19"
num-bigint = "0.4.6"

[lints.rust]
unsafe_code = "forbid"
